this is changes

--- a/products.html
+++ b/products.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="box2 col-3 text-left">
-                        <a href="#"><i class="fa fa-search"></i></a>
+                        <button type="submit" class="fa fa-search"></button>
                         <a href="#"><i class="fas fa-bars"></i></a>
                     </div>
 
@@ -124,13 +124,22 @@
 
                     <div class="col-12 porducer-me">
                         <!--Start box-one-->
-                        <div class="porducer-me-box box-one">
+                        <div class="porducer-me-box">
+                            <div class="tooles-button text-center">
+                                <button type="button" class="buy">شراء</button>
+                                <button type="button" class="clear">تنظيف العربه</button>
+                            </div>
                             <div class="row">
                                 <div class="col-md-4 col-sm-6  col-12">
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart heart"></button>
+                                            <div class="toole-me text-center">
+                                                <button type="button" class="fas fa-trash-alt trash"></button>
+                                                <button type="button" class="fas fa-skating skating"></button>
+                                            </div>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -143,7 +152,8 @@
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/1.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/1.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -157,7 +167,7 @@
                                         <div class='img-me'>
                                             <div class="overlay"></div>
                                             <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
-                                            <i class="far fa-heart"></i>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -170,7 +180,8 @@
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/1.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/1.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -183,7 +194,8 @@
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a> 
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -196,7 +208,8 @@
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -210,7 +223,7 @@
                                         <div class='img-me'>
                                             <div class="overlay"></div>
                                             <a href="producer-me.html"><img src="img/1.jpg"  alt=""></a>
-                                            <i class="far fa-heart"></i>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -223,7 +236,8 @@
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
@@ -236,7 +250,8 @@
                                     <div class="box">
                                         <div class='img-me'>
                                             <div class="overlay"></div>
-                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>                                            <i class="far fa-heart"></i>
+                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart"></button>
                                         </div>
                                         <div class="show-button">
                                             <span class="float-right">$900</span>
