pointed where you shuld edit

--- a/page1.html
+++ b/page1.html
@@ -573,6 +573,9 @@
                     <!--Start box-one-->
                     <div class="porducer-me-box">
                         <div class="row">
+
+
+                            <!-- Edit here -->
                             <div class="col-md-4 col-sm-6  col-12">
                                 <div class="box">
                                     <div class='img-me'>
@@ -590,113 +593,41 @@
                                     </div>
                                 </div>
                             </div>
-                            <figure class="card">
-
-                                <img src="images/items/1_1606117526A148.jpeg" />
-
-                                <figcaption>Dresses <a href="dashboard/seller/view_item/1">view</a></figcaption>
+                            <!-- /Edit here -->
 
 
+                        </div>
 
 
-                            </figure>
-                            <div class="col-12 porducer-me">
-                                <!--Start box-one-->
-                                <div class="porducer-me-box">
-                                    <div class="row">
-                                        <div class="col-md-4 col-sm-6  col-12">
-                                            <div class="box">
-                                                <div class='img-me'>
-                                                    <div class="overlay"></div>
-                                                    <a href="producer-me.html"><img src="images/items/1_1606117526B1034.jpeg" alt=""></a>
-                                                    <button type="button" class="far fa-heart heart"></button>
-                                                    <div class="toolbuttone-me text-center">
-                                                        <button type="button" class="fas fa-trash-alt trash"></button>
-                                                        <button type="button" class="fas fa-skating skating"></button>
-                                                    </div>
-                                                </div>
-                                                <div class="show-button">
-                                                    <span class="float-right">$900</span>
-                                                    <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <figure class="card">
-
-                                            <img src="images/items/1_1606117526B1034.jpeg" />
-
-                                            <figcaption>Dresses <a href="dashboard/seller/view_item/2">view</a></figcaption>
+                    </div>
 
 
 
+                </div>
+                <!-- end main content -->
+                <!-- import script -->
 
-                                        </figure>
-                                        <div class="col-12 porducer-me">
-                                            <!--Start box-one-->
-                                            <div class="porducer-me-box">
-                                                <div class="row">
-                                                    <div class="col-md-4 col-sm-6  col-12">
-                                                        <div class="box">
-                                                            <div class='img-me'>
-                                                                <div class="overlay"></div>
-                                                                <a href="producer-me.html"><img src="images/items/1_1606117526C1588.jpeg" alt=""></a>
-                                                                <button type="button" class="far fa-heart heart"></button>
-                                                                <div class="toolbuttone-me text-center">
-                                                                    <button type="button" class="fas fa-trash-alt trash"></button>
-                                                                    <button type="button" class="fas fa-skating skating"></button>
-                                                                </div>
-                                                            </div>
-                                                            <div class="show-button">
-                                                                <span class="float-right">$900</span>
-                                                                <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <figure class="card">
-
-                                                        <img src="images/items/1_1606117526C1588.jpeg" />
-
-                                                        <figcaption>Dresses <a href="dashboard/seller/view_item/3">view</a></figcaption>
-
-
-
-
-                                                    </figure>
-
-
-
-                                                </div>
-
-
-                                            </div>
-
-
-
-                                        </div>
-                                        <!-- end main content -->
-                                        <!-- import script -->
-
-                                        <script src="js/jQuery-min.js"></script>
-                                        <script src="js/iziModal.min.js"></script>
-                                        <script src="js/iziToast.js"></script>
-                                        <script src="js/control.js"></script>
-                                        <script src="js/notify-sys.js"></script>
-                                        <script src="js/dashboard.js"></script>
-                                        <script src="js/pages/dashboard/users.js"></script>
-                                        <script>
-                                            $(document).ready(function() {
+                <script src="js/jQuery-min.js"></script>
+                <script src="js/iziModal.min.js"></script>
+                <script src="js/iziToast.js"></script>
+                <script src="js/control.js"></script>
+                <script src="js/notify-sys.js"></script>
+                <script src="js/dashboard.js"></script>
+                <script src="js/pages/dashboard/users.js"></script>
+                <script>
+                    $(document).ready(function() {
 
 
 
 
 
 
-                                            });
-                                        </script>
+                    });
+                </script>
 
 
 
-                                        <!-- end import script -->
+                <!-- end import script -->
 </body>
 
 </html>
