changed in the page1

--- a/page1.html
+++ b/page1.html
@@ -579,10 +579,9 @@
                             <div class="col-md-4 col-sm-6  col-12">
                                 <div class="box">
                                     <div class='img-me'>
-                                        <div class="overlay"></div>
-                                        <a href="producer-me.html"><img src="images/items/1_1606117526A148.jpeg" alt=""></a>
+                                        <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
                                         <button type="button" class="far fa-heart heart"></button>
-                                        <div class="toolbuttone-me text-center">
+                                        <div class="toole-me">
                                             <button type="button" class="fas fa-trash-alt trash"></button>
                                             <button type="button" class="fas fa-skating skating"></button>
                                         </div>
@@ -593,6 +592,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <!-- /Edit here -->
 
 
