this is flex boxs

--- a/page1.html
+++ b/page1.html
@@ -569,15 +569,28 @@
 
 
             <div class="cards">
-                <div class="col-12 porducer-me">
-                    <!--Start box-one-->
-                    <div class="porducer-me-box">
-                        <div class="row">
+                        <!--Start box-one-->
+                        <div class="porducer-me-box">
+        
+                                <!-- Edit here -->
+                                    <div class="box">
+                                        <div class='img-me'>
+                                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                            <button type="button" class="far fa-heart heart"></button>
+                                            <div class="toole-me">
+                                                <button type="button" class="fas fa-trash-alt trash"></button>
+                                                <button type="button" class="fas fa-skating skating"></button>
+                                            </div>
+                                        </div>
+                                        <div class="show-button">
+                                            <span class="float-right">$900</span>
+                                            <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                                        </div>
+                                    </div>
+                                <!-- /Edit here -->
 
-
-                            <!-- Edit here -->
-                            <div class="col-md-4 col-sm-6  col-12">
-                                <div class="box">
+                                 <!-- Edit here -->
+                                 <div class="box">
                                     <div class='img-me'>
                                         <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
                                         <button type="button" class="far fa-heart heart"></button>
@@ -591,18 +604,93 @@
                                         <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
                                     </div>
                                 </div>
-                            </div>
-
                             <!-- /Edit here -->
 
+                             <!-- Edit here -->
+                             <div class="box">
+                                <div class='img-me'>
+                                    <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                    <button type="button" class="far fa-heart heart"></button>
+                                    <div class="toole-me">
+                                        <button type="button" class="fas fa-trash-alt trash"></button>
+                                        <button type="button" class="fas fa-skating skating"></button>
+                                    </div>
+                                </div>
+                                <div class="show-button">
+                                    <span class="float-right">$900</span>
+                                    <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                                </div>
+                            </div>
+                        <!-- /Edit here -->
+                          <!-- Edit here -->
+                          <div class="box">
+                            <div class='img-me'>
+                                <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                <button type="button" class="far fa-heart heart"></button>
+                                <div class="toole-me">
+                                    <button type="button" class="fas fa-trash-alt trash"></button>
+                                    <button type="button" class="fas fa-skating skating"></button>
+                                </div>
+                            </div>
+                            <div class="show-button">
+                                <span class="float-right">$900</span>
+                                <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                            </div>
+                        </div>
+                    <!-- /Edit here -->
+
+                      <!-- Edit here -->
+                      <div class="box">
+                        <div class='img-me'>
+                            <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                            <button type="button" class="far fa-heart heart"></button>
+                            <div class="toole-me">
+                                <button type="button" class="fas fa-trash-alt trash"></button>
+                                <button type="button" class="fas fa-skating skating"></button>
+                            </div>
+                        </div>
+                        <div class="show-button">
+                            <span class="float-right">$900</span>
+                            <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                        </div>
+                    </div>
+                <!-- /Edit here -->
+
+                  <!-- Edit here -->
+                  <div class="box">
+                    <div class='img-me'>
+                        <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                        <button type="button" class="far fa-heart heart"></button>
+                        <div class="toole-me">
+                            <button type="button" class="fas fa-trash-alt trash"></button>
+                            <button type="button" class="fas fa-skating skating"></button>
+                        </div>
+                    </div>
+                    <div class="show-button">
+                        <span class="float-right">$900</span>
+                        <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                    </div>
+                </div>
+            <!-- /Edit here -->
+
+              <!-- Edit here -->
+              <div class="box">
+                <div class='img-me'>
+                    <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                    <button type="button" class="far fa-heart heart"></button>
+                    <div class="toole-me">
+                        <button type="button" class="fas fa-trash-alt trash"></button>
+                        <button type="button" class="fas fa-skating skating"></button>
+                    </div>
+                </div>
+                <div class="show-button">
+                    <span class="float-right">$900</span>
+                    <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                </div>
+            </div>
+        <!-- /Edit here -->
 
                         </div>
-
-
-                    </div>
-
-
-
                 </div>
                 <!-- end main content -->
                 <!-- import script -->
