--- a/page1.html
+++ b/page1.html
@@ -579,7 +579,7 @@
                             <div class="col-md-4 col-sm-6  col-12">
                                 <div class="box">
                                     <div class='img-me'>
-                                        <a href="producer-me.html"><img src="img/5.jpg"  alt=""></a>
+                                        <a href="producer-me.html"><img src="img/5.jpg" alt=""></a>
                                         <button type="button" class="far fa-heart heart"></button>
                                         <div class="toole-me">
                                             <button type="button" class="fas fa-trash-alt trash"></button>
@@ -587,8 +587,8 @@
                                         </div>
                                     </div>
                                     <div class="show-button">
-                                        <span class="float-right">$900</span>
-                                        <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button>
+                                        <!-- <span class="float-right">$900</span> -->
+                                        <!-- <button class="float-lift" type="button"><i class="fas fa-cart-arrow-down"></i>عربتي </button> -->
                                     </div>
                                 </div>
                             </div>
