this is change in the stylePage and page2

--- a/page2.html
+++ b/page2.html
@@ -99,7 +99,7 @@
         </div>
     </header>
 
-    <!--End header-->
+        <!--End header-->
 
     <!--Start navbar-->
 
@@ -153,6 +153,10 @@
                                 <form action="/basket/buy" method="POST" style="display: inline-block">
                                     <input type="hidden" name="_token" value="yAJ5Fyp6rUH72N4cAdIRqfCruwnEFRuKJlUCv6iS"> <button type="submit" class="buy">شراء</button>
                                 </form>
+                                <div class="sub-total">
+                                    <span class="total-car"><label> اجمالي السلة: </label><span> 2000</span></span>
+                                    <span class="total-shiping"><label>  تكلفة الشحن : </label><span> 2000</span></span>
+                                </div>
                             </div>
 
 
