--- a/page2.html
+++ b/page2.html
@@ -146,7 +146,7 @@
                         <div class="row">
 
 
-                            <div class="tooles-button text-center ">
+                            <div class="basket-bar text-center ">
                                 <form action="/basket/clear" method="POST" style="display: inline-block">
                                     <input type="hidden" name="_token" value="yAJ5Fyp6rUH72N4cAdIRqfCruwnEFRuKJlUCv6iS"> <button type="submit" class="clear">تنظيف العربه</button>
                                 </form>
