--- a/page3.html
+++ b/page3.html
@@ -325,30 +325,34 @@
             </div>
         </div>
     </div>
-    <div id="modal" class="basketQuantityModal iziModal" aria-hidden="true" aria-labelledby="modal" role="dialog" style="background: rgba(255, 255, 255, 0.9) none repeat scroll 0% 0%; z-index: 103; border-radius: 3px; max-width: 700px;">
+
+    <div id="modal" class="basketQuantityModal iziModal" aria-hidden="true" aria-labelledby="modal" role="dialog">
         <div class="iziModal-wrap">
             <div class="iziModal-wrap" style="height: 214px;">
                 <div class="iziModal-content" style="padding: 0px;">
-                    <h5 class="mt-1">معلومات العنصر</h5>
+                    <h5 class="header">معلومات العنصر</h5>
                     <p>المخزون : <span id="storeQuantity">3</span></p>
                     <p>اللون : <span id="itemColor">Red</span></p>
                     <p>الحجم : <span id="itemSize">X</span></p>
                     <p>الكميه المطلوبه : <span id="itemQuantity">1</span></p>
-                    <hr>
-                    <p>
-                        <span>الكميه</span>
+
+                    <div>
+                        <h6>الكميه</h6>
                         <input value="" id="quantity" type="number" onkeypress="return event.charCode >= 48 &amp;&amp; event.charCode <= 57">
-                    </p>
-                    <p>
-                        <span>اللون</span>
+                    </div>
+                    <div>
+                        <h6>اللون</h6>
                         <select name="color" id="colorsOprions"><option value="Red">Red</option></select>
 
-                    </p>
-                    <p>
-                        <span>الحجم</span>
-                        <select name="size" id="sizeOprions"><option selected="" value="X">X</option><option value="XL">XL</option></select>
+                    </div>
+                    <div>
+                        <h6>الحجم</h6>
+                        <select name="size" id="sizeOprions">
+                            <option selected="" value="X">X</option>
+                            <option value="XL">XL</option>
+                        </select>
 
-                    </p>
+                    </div>
                     <button data-item_id="10" class="btn btn-success mb-2" id="updateQU">تحديث</button>
                 </div>
             </div>
