change style header h3

--- a/page3.html
+++ b/page3.html
@@ -330,13 +330,14 @@
         <div class="iziModal-wrap">
             <div class="iziModal-wrap" style="height: 214px;">
                 <div class="iziModal-content" style="padding: 0px;">
-                    <h5 class="header">معلومات العنصر</h5>
+                    <h5 class="header border-bottom-1 text-center">معلومات العنصر</h5>
                     <p>المخزون : <span id="storeQuantity">3</span></p>
                     <p>اللون : <span id="itemColor">Red</span></p>
                     <p>الحجم : <span id="itemSize">X</span></p>
                     <p>الكميه المطلوبه : <span id="itemQuantity">1</span></p>
-
+                    
                     <div>
+                        <h5 class="header text-center">تعديل العنصر</h5>
                         <h6>الكميه</h6>
                         <input value="" id="quantity" type="number" onkeypress="return event.charCode >= 48 &amp;&amp; event.charCode <= 57">
                     </div>
