this from page4 style control

--- a/page4.html
+++ b/page4.html
@@ -293,12 +293,12 @@
     <div class="wrapper">
 
 
-        <form action="/get-paid" method="post">
+        <form action="/get-paid" method="post" class="conversion">
             <input type="hidden" name="_token" value="MsgN0VslJ1RaQXfh7kigbSGlZUXlQj7mQnE3BAJy"> <input type="text" name="phone_number" placeholder="رقم الهاتف">
             <input type="text" name="money" placeholder="المبلغ">
             <select name="payment_methode" id="">
-        <option value="vodafone">vodafone</option>
-    </select>
+                <option value="vodafone">vodafone</option>
+            </select>
             <button type="submit" class="btn-base btn-success">طلب التحويل</button>
         </form>
 
